# respk_toy

./: .gitignore  CMakeLists.txt  README.md  build.sh  ntoy.conf.in  ntoy.service  ntoy_led.c  ntoy_led.h  ntoy_spi.c
src/: led_effect.c  main.c  matrix_test.c  ntoy_button.c  ntoy_button.h  ntoy_gpio.c  ntoy_gpio.h  ntoy_led.c  ntoy_led.h  ntoy_matrix.c  ntoy_matrix.h  ntoy_spi.c  ntoy_spi.h
tests/: dotmatrix.py  servo_sg90.py
